syntax = "proto3";
option java_multiple_files = true;

package org.ctoader.learn.grpc.api;

message Trade {
    int32 refid = 1;
    string sourceSystem = 2;
    string tradeId = 3;
    int32 version = 4;
    string productType = 5;
    string productSubType = 6;
    bytes body = 7;
}

message TradeFilter {
    int32 refid = 1;
    string sourceSystem = 2;
    string tradeId = 3;
    int32 version = 4;
    string productType = 5;
    string productSubType = 6;
}

message TradeResponse {
    repeated Trade trades = 1;
}

service TradeService {
    rpc findTrades(TradeFilter) returns (stream Trade);
}